--- a/阿里云服务器的相关配置.md
+++ b/阿里云服务器的相关配置.md
@@ -7,7 +7,7 @@ Xshell与Xftp
 ## CentOS 6.7(64位) gcc升级
 为了学习极简数据结构BIDS，需要将gcc升级到5.0以上。而阿里云服务器CentOS 6.7默认的版本为4.8.5版本（如下），因此需要手动升级gcc，这里升级到gcc-6.1.0版本。
 
-![gccVersion-0](pic\gccVersion-0.PNG)
+<img src="pic\gccVersion-0.PNG" alt="gccVersion-0"  />
 
 参考链接：https://www.cnblogs.com/lzpong/p/5755678.html
 具体说明如下：
@@ -131,7 +131,7 @@ ls -l /usr/bin/python*
 
 看到/usr/bin/python和/usr/bin/python2都是软链接。/usr/bin/python指向/usr/bin/python2，而/usr/bin/python2最终又指向/usr/bin/python2.7。所以运行python/python2/python2.7是一样的。
 3. 安装python3
-  （1）登录https://www.python.org/downloads/source/ ，这里下载Python-3.6.4版本，注意选择Gzipped source tarball
+    （1）登录https://www.python.org/downloads/source/ ，这里下载Python-3.6.4版本，注意选择Gzipped source tarball
 
   > 安装包已经上传到百度云中：/郭晨沐/tools/阿里云服务器配置
 
