修复图片不显示问题
已经修改成功

--- a/阿里云服务器的相关配置.md
+++ b/阿里云服务器的相关配置.md
@@ -42,7 +42,7 @@ make -j2
 ```
 >这里进行编译时，使用cpu2核进行优化编译,CPU使用率高达99%，用时较长
 
-![CPU](pic\CPU.PNG)
+<img src="pic\CPU.PNG" alt="CPU"  />
 
 6. 进行安装，并查看安装结果
 ```linux
@@ -50,7 +50,7 @@ make install
 ls /usr/local/bin | grep gcc
 ```
 
-![install](pic\install.PNG)
+<img src="pic\install.PNG" alt="install"  />
 
 7.重启并查看gcc版本
 在阿里云服务器ECS中对云服务器进行重启
@@ -59,7 +59,7 @@ ls /usr/local/bin | grep gcc
 gcc --version
 ```
 
-![gccVersion](pic\gccVersion-1.PNG)
+<img src="pic\gccVersion-1.PNG" alt="gccVersion"  />
 
 安装成功
 8. 编译c++文件进行测试
@@ -127,7 +127,7 @@ which python
 ls -l /usr/bin/python*
 ```
 
-![pythonVersion](pic\pythonVersion-0.PNG)
+<img src="pic\pythonVersion-0.PNG" alt="pythonVersion"  />
 
 看到/usr/bin/python和/usr/bin/python2都是软链接。/usr/bin/python指向/usr/bin/python2，而/usr/bin/python2最终又指向/usr/bin/python2.7。所以运行python/python2/python2.7是一样的。
 3. 安装python3
@@ -162,7 +162,7 @@ make
 make install
 ```
 
-![PythonPip](pic\PythonPip.PNG)
+<img src="pic\PythonPip.PNG" alt="PythonPip"  />
 
 可以看到同时也安装了setuptools和pip工具。
 （5）检查安装
